fix alignment of cards

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -295,9 +295,21 @@
   color: #181C3A;
   font-size: 1rem;
   text-align: center;
- }
+  width: 90%;
+  margin-left: 5%;
+}
 
  #main-heading {
   font-size: 3.5rem;
   text-align: center;
+ }
+
+ #daily-card {
+  width: 90%;
+ }
+
+ #daily-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
  }
